# restauranteConcurrente

./: .travis.yml  .travis.yml~  CMakeLists.txt  CMakeLists.txt~  Log.cpp  Log.h  README.md  README.md~  apagon.cpp  main.cpp
Lock/: LockFd.cpp  LockFd.h  LockFile.cpp
Pipe&Fifo/: Fifo.cpp  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h  Pipe.cpp  Pipe.h
Semaforos/: Semaforo.cpp  Semaforo.h
SharedMem/: MemoriaCompartida.h  MemoriaCompartida2.h
Signal/: Apagon_Handler.h  Apagon_Handler_Procesos.h  SignalHandler.cpp
config/: restaurante.config
src/: Cocinero.cpp  Cocinero.h  Forkeable.cpp  Forkeable.h  GeneradorClientes.cpp  GeneradorClientes.h  Gerente.cpp  Gerente.h  GrupoComensales.cpp  GrupoComensales.h  LimpiadorMesas.cpp  LimpiadorMesas.h  Log.cpp  Log.h  Mesa.cpp  Mesa.h  Mesas.cpp  Mesas.h  Mozo.cpp  Mozo.h  Parser.cpp  Parser.h  Recepcionista.cpp  Recepcionista.h  Restaurante.cpp  Restaurante.h  lockFiles.h
test/: CMakeLists.txt  main.cpp
test/foo_tests/: FooFixture.cpp  basic_check.cpp
test/lib/googletest/: Makefile  Makefile.am  cmake_install.cmake
test/lib/googletest/xcode/Samples/FrameworkSample/WidgetFramework.xcodeproj/: project.pbxproj
test/lib/googletest/xcode/gtest.xcodeproj/: project.pbxproj
test/mozo_test/: MozoRealizaPedidoComida.cpp
test/recepcionista_test/: RecepcionistaFixture.cpp
